--- a/app/views/asperities/_form.html.haml
+++ b/app/views/asperities/_form.html.haml
@@ -8,11 +8,14 @@
     = f.label :drawing
     = f.text_field :drawing, class: 'form-control'
   .form-group
-    = f.label :form
-    = f.text_field :form, class: 'form-control'
+    = f.label :form_poverh
+    = f.text_field :form_poverh, class: 'form-control'
   .form-group
-    = f.label :type
-    = f.text_field :type, class: 'form-control'
+    = f.label :type_poverh
+    = f.text_field :type_poverh, class: 'form-control'
+  .form-group
+    = f.label :complexity
+    = f.text_field :complexity, class: 'form-control'
   %p
     .form-actions
       = f.submit  nil, class: 'btn btn-primary'
