--- a/app/views/asperities/show.html.haml
+++ b/app/views/asperities/show.html.haml
@@ -8,8 +8,12 @@
   = @asperity.drawing
 %p
   %b Форма:
-  = @asperity.form
+  = @asperity.form_poverh
 %p
   %b Тип:
-  = @asperity.type
+  = @asperity.type_poverh
+%p
+  %b Тип:
+  = @asperity.complexity
+
 
