--- a/app/views/machines/show.html.haml
+++ b/app/views/machines/show.html.haml
@@ -21,3 +21,7 @@
 %p
   %b Трудоемкость:
   = @machine.complexity
+%p
+  %b Подходящие детали:
+  - unless @sections.empty?
+    = @sections.map{|m| m.name}.join(', ')
