--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -36,7 +36,7 @@
     %th Деталь
     %th Количество деталей
     -#- @plan.products.each do |s|
-%table.table
+%table
   %tr
     %td=p.name
     %td=@plan.count_product
