--- a/app/views/devices/_form.html.haml
+++ b/app/views/devices/_form.html.haml
@@ -23,7 +23,11 @@
   .form-group
     = f.label :complexity
     = f.text_field :complexity, class: 'form-control'
-
+  .row
+    .col-sm-4
+      .form-group
+        = f.label :asperity_id
+        = f.select :asperity_id, Asperity.all.map{|c| [c.number]},{}, class: 'form-control'
   %p
     .form-actions
       = f.submit  nil, class: 'btn btn-primary'
