--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -14,5 +14,9 @@
   - unless @machines.empty?
     = @machines.map{|m| m.name}.join(', ')
 %p
+  %b Подходящие измерительные приборы:
+  - unless @devices.empty?
+    = @devices.map{|m| m.name}.join(', ')
+%p
 -if session[:user_id].nil? == false
   = link_to 'Исправить', edit_section_path(@section), :class => "btn btn-success"
